[project]
name = "btf-rendering"
version = "3.0.0"
description = "Custom Mitsuba3 plugin to render measured BTF (Bidirectional Texture Function)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # "cython>=3.1.4",
    # "btf-extractor",
    # "setuptools>=75.3.2",
    # "imageio>=2.35.1",
    # "simplejpeg>=1.7.3",
    "opencv-python>=4.11.0.86",
    "mitsuba>=3.6.2",
    "scipy>=1.10.1",
    "tqdm",
    "numpy>=1.24.4",
]

# [tool.uv.sources]
# btf-extractor = { path = "./BTF_extractor", editable = true }


